// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartRadialProgress UnitTest renders correctly 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNSVGSvgView
      bbHeight={150}
      bbWidth={150}
      focusable={false}
      height={150}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 150,
            "width": 150,
          },
        ]
      }
      width={150}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M4.592425496802574e-15,-75A75,75,0,1,1,-4.592425496802574e-15,75A75,75,0,1,1,4.592425496802574e-15,-75M-1.3409882450663516e-14,-73A73,73,0,1,0,1.3409882450663516e-14,73A73,73,0,1,0,-1.3409882450663516e-14,-73Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              75,
              75,
            ]
          }
          propList={
            [
              "stroke",
            ]
          }
          stroke={
            {
              "payload": 4280953418,
              "type": 0,
            }
          }
        />
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          font={
            {
              "fontSize": 12,
              "textAnchor": "middle",
            }
          }
          propList={
            [
              "fill",
            ]
          }
          rotate={[]}
          x={
            [
              75,
            ]
          }
          y={
            [
              75,
            ]
          }
        >
          <RNSVGTSpan
            content="75%"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGPath
          d="M4.592425496802574e-15,-75A75,75,0,1,1,-75,9.184850993605149e-15L-73,8.939921633775678e-15A73,73,0,1,0,4.469960816887839e-15,-73Z"
          fill={
            {
              "payload": 4278244607,
              "type": 0,
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              75,
              75,
            ]
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ChartRadialProgress UnitTest renders with custom label color and size 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNSVGSvgView
      bbHeight={150}
      bbWidth={150}
      focusable={false}
      height={150}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 150,
            "width": 150,
          },
        ]
      }
      width={150}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M4.592425496802574e-15,-75A75,75,0,1,1,-4.592425496802574e-15,75A75,75,0,1,1,4.592425496802574e-15,-75M-1.3409882450663516e-14,-73A73,73,0,1,0,1.3409882450663516e-14,73A73,73,0,1,0,-1.3409882450663516e-14,-73Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              75,
              75,
            ]
          }
          propList={
            [
              "stroke",
            ]
          }
          stroke={
            {
              "payload": 4280953418,
              "type": 0,
            }
          }
        />
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          font={
            {
              "fontSize": 18,
              "textAnchor": "middle",
            }
          }
          propList={
            [
              "fill",
            ]
          }
          rotate={[]}
          x={
            [
              75,
            ]
          }
          y={
            [
              75,
            ]
          }
        >
          <RNSVGTSpan
            content="75%"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGPath
          d="M4.592425496802574e-15,-75A75,75,0,1,1,-75,9.184850993605149e-15L-73,8.939921633775678e-15A73,73,0,1,0,4.469960816887839e-15,-73Z"
          fill={
            {
              "payload": 4278244607,
              "type": 0,
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              75,
              75,
            ]
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ChartRadialProgress UnitTest renders with custom radii 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNSVGSvgView
      bbHeight={150}
      bbWidth={150}
      focusable={false}
      height={150}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 150,
            "width": 150,
          },
        ]
      }
      width={150}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M3.67394039744206e-15,-60A60,60,0,1,1,-3.67394039744206e-15,60A60,60,0,1,1,3.67394039744206e-15,-60M-9.184850993605149e-15,-50A50,50,0,1,0,9.184850993605149e-15,50A50,50,0,1,0,-9.184850993605149e-15,-50Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              60,
              60,
            ]
          }
          propList={
            [
              "stroke",
            ]
          }
          stroke={
            {
              "payload": 4280953418,
              "type": 0,
            }
          }
        />
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          font={
            {
              "fontSize": 12,
              "textAnchor": "middle",
            }
          }
          propList={
            [
              "fill",
            ]
          }
          rotate={[]}
          x={
            [
              60,
            ]
          }
          y={
            [
              60,
            ]
          }
        >
          <RNSVGTSpan
            content="75%"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGPath
          d="M3.67394039744206e-15,-60A60,60,0,1,1,-60,7.34788079488412e-15L-50,6.123233995736766e-15A50,50,0,1,0,3.061616997868383e-15,-50Z"
          fill={
            {
              "payload": 4278244607,
              "type": 0,
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              60,
              60,
            ]
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ChartRadialProgress UnitTest renders with value 0 (empty progress) 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNSVGSvgView
      bbHeight={150}
      bbWidth={150}
      focusable={false}
      height={150}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 150,
            "width": 150,
          },
        ]
      }
      width={150}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M4.592425496802574e-15,-75A75,75,0,1,1,-4.592425496802574e-15,75A75,75,0,1,1,4.592425496802574e-15,-75M-1.3409882450663516e-14,-73A73,73,0,1,0,1.3409882450663516e-14,73A73,73,0,1,0,-1.3409882450663516e-14,-73Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              75,
              75,
            ]
          }
          propList={
            [
              "stroke",
            ]
          }
          stroke={
            {
              "payload": 4280953418,
              "type": 0,
            }
          }
        />
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          font={
            {
              "fontSize": 12,
              "textAnchor": "middle",
            }
          }
          propList={
            [
              "fill",
            ]
          }
          rotate={[]}
          x={
            [
              75,
            ]
          }
          y={
            [
              75,
            ]
          }
        >
          <RNSVGTSpan
            content="0%"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGPath
          d="M4.592425496802574e-15,-75L4.469960816887839e-15,-73Z"
          fill={
            {
              "payload": 4278244607,
              "type": 0,
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              75,
              75,
            ]
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ChartRadialProgress UnitTest renders with value at maximum 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNSVGSvgView
      bbHeight={150}
      bbWidth={150}
      focusable={false}
      height={150}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 150,
            "width": 150,
          },
        ]
      }
      width={150}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M4.592425496802574e-15,-75A75,75,0,1,1,-4.592425496802574e-15,75A75,75,0,1,1,4.592425496802574e-15,-75M-1.3409882450663516e-14,-73A73,73,0,1,0,1.3409882450663516e-14,73A73,73,0,1,0,-1.3409882450663516e-14,-73Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              75,
              75,
            ]
          }
          propList={
            [
              "stroke",
            ]
          }
          stroke={
            {
              "payload": 4280953418,
              "type": 0,
            }
          }
        />
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          font={
            {
              "fontSize": 12,
              "textAnchor": "middle",
            }
          }
          propList={
            [
              "fill",
            ]
          }
          rotate={[]}
          x={
            [
              75,
            ]
          }
          y={
            [
              75,
            ]
          }
        >
          <RNSVGTSpan
            content="100%"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGPath
          d="M4.592425496802574e-15,-75A75,75,0,1,1,-4.592425496802574e-15,75A75,75,0,1,1,4.592425496802574e-15,-75M-1.3409882450663516e-14,-73A73,73,0,1,0,1.3409882450663516e-14,73A73,73,0,1,0,-1.3409882450663516e-14,-73Z"
          fill={
            {
              "payload": 4278244607,
              "type": 0,
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              75,
              75,
            ]
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</RNCSafeAreaProvider>
`;
